--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,112 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  border: 0;
+  outline: 0;
+  list-style: none;
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background: #302C42;
+}
+
+
+.about_container {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  height: 756px;
+  width: 100%;
+  top: 600px;
+}
+
+.about_line1 {
+  position: absolute;
+  width: 100%;
+  height: 256.68px;
+  left: -6.5px;
+  top: 225px;
+}
+
+.about_line2 {
+  position: absolute;
+  width: 100%;
+  height: 211.75px;
+  left: -4.5px;
+  top: 500px;
+
+}
+
+.services_section {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  height: 716px;
+  width: 100%;
+  top: 730px;
+}
+
+.services_main_line {
+  position: absolute;
+  width: 100%;
+  height: 814px;
+  left: -3px;
+  top: 250px;
+}
+
+.process_container {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  height: 609px;
+  top: 1600px;
+}
+
+.option_container {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  height: 1008px;
+  top: 1750px;
+}
+
+.footer_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  top: 1900px;
+  width: 100%;
+  height: 500px;
+}
+
+
+@media  screen and (max-width:1100px) {
+
+  .about_container {
+    top: 270px;
+    height:820px;
+  }
+
+  .about_line1,
+  .about_line2 {
+    display: none;
+  }
+
+  .services_section {
+    top: 500px;
+  }
+
+  .services_main_line {
+    display: none;
+  }
+
+  .process_container {
+    top: 1600px;
+  }
 }
